deploy/demo/observability/kobs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kobs
  namespace: observability
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
        prometheus.io/scrape: "true"
        prometheus.io/port: "15221"
    spec:
      containers:
        - name: kobs
          image: "kobsio/kobs:0.1.0"
          imagePullPolicy: Always
          args:
            - --log.level=trace
