deploy/demo/observability/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kobs-gateway
  namespace: observability
  labels:
    app: kobs
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - kobs.demo
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kobs
  namespace: observability
  labels:
    app: kobs
spec:
  hosts:
    - kobs.demo
  gateways:
    - kobs-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kobs
            port:
              number: 15222
